tests/fixtures/invalid/ord_dict.py
# Cannot call ord() with Dict[str, int]
x = ord({"a": 1})
